出入库等信息需求变更和禁止屏幕缩放

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -83,6 +83,9 @@ body{
     align-items: center;
     justify-content: center;
 }
+.fontSize_10{
+    font-size: 10px;
+}
 .fontSize_13{
     font-size: 13px;
 }
